track version in javascript

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href="styles/jetbrains-mono.css" rel="Stylesheet">
     <link href="styles/logo-styles.css" rel="Stylesheet">
     <script type="text/javascript" src="scripts/platform-content-handler.js" async="async"></script>
+    <script id="versions-script" type="text/javascript" src="scripts/versions.js" async="async"></script>
 </head>
 <body>
 <div class="navigation-wrapper" id="navigation-wrapper">
@@ -30,29 +31,6 @@
             <span>Atrium</span>
         </a>
     </div>
-    <nav id="versions">
-        <button type="button">Version<span class="arrow"></span></button>
-        <ul class="dropdown">
-            <li><a href="0.18.0/">0.18.0</a></li>
-            <li><a href="0.17.0/">0.17.0</a></li>
-            <li><a href="0.16.0/">0.16.0</a></li>
-            <li><a href="0.15.0/">0.15.0</a></li>
-            <li><a href="0.14.0/">0.14.0</a></li>
-            <li><a href="0.13.0/">0.13.0</a></li>
-            <li><a href="0.12.0/">0.12.0</a></li>
-            <li><a href="0.11.0/">0.11.0</a></li>
-            <li><a href="0.10.0/">0.10.0</a></li>
-            <li><a href="0.9.0/">0.9.0</a></li>
-            <li><a href="0.8.0/">0.8.0</a></li>
-            <li><a href="0.7.0/">0.7.0</a></li>
-            <li><a href="0.6.0/">0.6.0</a></li>
-            <li><a href="0.6.0/">0.6.0</a></li>
-            <li><a href="0.5.0/">0.5.0</a></li>
-            <li><a href="0.4.0/">0.4.0</a></li>
-            <li><a href="0.3.0/">0.3.0</a></li>
-            <li><a href="0.2.0/">0.2.0</a></li>
-        </ul>
-    </nav>
     <div class="pull-right d-flex">
         <button id="theme-toggle-button"><span id="theme-toggle"></span></button>
     </div>
@@ -113,7 +91,7 @@
             </div>
         </div>
         <div class="footer">
-            <span>Atrium &copy; Copyright Robert Stoll &lt;rstoll@tutteli.ch&gt; 2017, 2023</span>
+            <span>Atrium &copy; Copyright Robert Stoll &lt;rstoll@tutteli.ch&gt;</span>
         </div>
     </div>
 </div>
