make sure new version of version.js is loaded

--- a/0.2.0/index.html
+++ b/0.2.0/index.html
@@ -10,7 +10,7 @@
     <link href="../styles/logo-styles.css" rel="Stylesheet">
     <link href="../styles/alert.css" rel="Stylesheet">
     <script type="text/javascript" src="../scripts/platform-content-handler.js" async="async"></script>
-    <script id="versions-script" type="text/javascript" src="../scripts/versions.js" data-version="0.2.0" async="async"></script>
+    <script id="versions-script" type="text/javascript" src="../scripts/versions.js?v=1" data-version="0.2.0" async="async"></script>
 </head>
 <body>
 <div class="navigation-wrapper" id="navigation-wrapper">
