--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="styles/style.css" rel="Stylesheet">
     <link href="styles/jetbrains-mono.css" rel="Stylesheet">
     <link href="styles/logo-styles.css" rel="Stylesheet">
-    <script id="versions-script" type="text/javascript" src="scripts/versions.js" async="async"></script>
+    <script id="versions-script" type="text/javascript" src="scripts/versions.js?v=1" async="async"></script>
 </head>
 <body>
 <div class="navigation-wrapper" id="navigation-wrapper">
