add canonical ref to latest version via versions.js

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Code documentation of Atrium, Overview">
+    <meta name="keywords" content="Kotlin, Expectation-library, Assertion-Library, Testing, Multiplatform">
+    <meta name="author" content="Robert Stoll">
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <title>Atrium Overview</title>
     <script type="text/javascript" src="scripts/platform-content-handler.js" async="async"></script>
@@ -8,7 +12,7 @@
     <link href="styles/style.css" rel="Stylesheet">
     <link href="styles/jetbrains-mono.css" rel="Stylesheet">
     <link href="styles/logo-styles.css" rel="Stylesheet">
-    <script id="versions-script" type="text/javascript" src="scripts/versions.js?v=1" async="async"></script>
+    <script id="versions-script" type="text/javascript" src="scripts/versions.js?v=1.1" async="async"></script>
 </head>
 <body>
 <div class="navigation-wrapper" id="navigation-wrapper">
@@ -27,7 +31,7 @@
             <div class="cover ">
                 <h2 class="">Overview</h2>
                 <ul style="margin-bottom: 2rem">
-                    <li>Atrium is an open-source assertion library for Kotlin.</li>
+                    <li>Atrium is an open-source expectation/assertion library for Kotlin.</li>
                     <li> It is licences under
                         <a href="https://joinup.ec.europa.eu/collection/eupl/eupl-text-11-12">
                             <span>EUPL 1.2</span><span class="external-indicator"></span>
@@ -68,7 +72,7 @@
                     </li>
                     <li>
                         Take a look at
-                        <a href="https://github.com/robstoll/atrium/blob/master/.github/CONTRIBUTING.md">
+                        <a href="https://github.com/robstoll/atrium/blob/main/.github/CONTRIBUTING.md">
                             <span>CONTRIBUTING.md</span><span class="external-indicator"></span>
                         </a>
                         for more ideas.
