--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="description" content="Code documentation of Atrium, Overview">
     <meta name="keywords" content="Kotlin, Expectation-library, Assertion-Library, Testing, Multiplatform">
     <meta name="author" content="Robert Stoll">
+    <meta name="copyright"content="Robert Stoll">
+    <meta name="og:image" content="../logo_social.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <title>Atrium Overview</title>
     <script type="text/javascript" src="scripts/platform-content-handler.js" async="async"></script>
