--- a/0.2.0/index.html
+++ b/0.2.0/index.html
@@ -33,7 +33,7 @@
                 <p style="margin-bottom: 1rem">
                     Following the most important links:
                 </p>
-                <ul>
+                <ul style="margin-bottom:2rem;">
                     <li>
                         <a href="https://github.com/robstoll/atrium/releases/tag/v0.2.0">
                             <span>Release Notes</span><span class="external-indicator"></span>
@@ -53,7 +53,7 @@
                         <a href="doc"><span>KDoc</span></span></a>
                     </li>
                 </ul>
-                <p>Back to the overview</p>
+                <p>Back to <a href="../">the overview</a></p>
             </div>
         </div>
         <div class="footer">
