also add a version to styles.css and alerts.css

--- a/0.9.0/index.html
+++ b/0.9.0/index.html
@@ -7,10 +7,10 @@
     <script>var pathToRoot = "";</script>
     <link href="../styles/style.css" rel="Stylesheet">
     <link href="../styles/jetbrains-mono.css" rel="Stylesheet">
-    <link href="../styles/logo-styles.css" rel="Stylesheet">
-    <link href="../styles/alert.css" rel="Stylesheet">
+    <link href="../styles/logo-styles.css?v=1" rel="Stylesheet">
+    <link href="../styles/alert.css?v=1" rel="Stylesheet">
     <script type="text/javascript" src="../scripts/platform-content-handler.js" async="async"></script>
-    <script id="versions-script" type="text/javascript" src="../scripts/versions.js?v=1.1.1.1" data-version="0.9.0" async="async"></script>
+    <script id="versions-script" type="text/javascript" src="../scripts/versions.js?v=1.1.1" data-version="0.9.0" async="async"></script>
 </head>
 <body>
 <div class="navigation-wrapper" id="navigation-wrapper">
