--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <link href="logo-icon.svg" rel="icon" type="image/svg">
     <link href="styles/style.css" rel="Stylesheet">
     <link href="styles/jetbrains-mono.css" rel="Stylesheet">
-    <link href="styles/logo-styles.css" rel="Stylesheet">
-    <script id="versions-script" type="text/javascript" src="scripts/versions.js?v=1.1.1.1" async="async"></script>
+    <link href="styles/logo-styles.css?v=1" rel="Stylesheet">
+    <link href="styles/alert.css?v=1" rel="Stylesheet">
+    <script id="versions-script" type="text/javascript" src="scripts/versions.js?v=1.1.1" async="async"></script>
 </head>
 <body>
 <div class="navigation-wrapper" id="navigation-wrapper">
