--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Code documentation of Atrium, Overview">
     <meta name="keywords" content="Kotlin, Expectation-library, Assertion-Library, Testing, Multiplatform">
     <meta name="author" content="Robert Stoll">
-    <meta name="copyright"content="Robert Stoll">
+    <meta name="copyright" content="Robert Stoll">
     <meta name="og:image" content="../logo_social.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <title>Atrium Overview</title>
@@ -13,7 +13,7 @@
     <link href="logo-icon.svg" rel="icon" type="image/svg">
     <link href="styles/style.css" rel="Stylesheet">
     <link href="styles/jetbrains-mono.css" rel="Stylesheet">
-    <link href="styles/logo-styles.css?v=1" rel="Stylesheet">
+    <link href="styles/logo-styles.css?v=1.1" rel="Stylesheet">
     <link href="styles/alert.css?v=1" rel="Stylesheet">
     <script id="versions-script" type="text/javascript" src="scripts/versions.js?v=1.1.2" async="async"></script>
 </head>
@@ -50,8 +50,8 @@
                 </ul>
                 <ul style="margin-bottom: 2rem">
                     <li>
-                        Jump straight to the <a style="bolder; font-size:1.5em;" href="0.18.0">latest version (which is
-                        0.18.0)</a>
+                        Jump straight to the
+                        <a style="bolder; font-size:1.5em;" href="1.0.0">latest version (which is 1.0.0)</a>
                     </li>
                     <li>... or use the version switcher above to see the documentation of another version.</li>
                 </ul>
