add language to <html> tag

--- a/latest/index.html
+++ b/latest/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
    <head>
     <title>Atrium - expectation library for Kotlin</title>
     <script type="text/javascript">         
