--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                 <ul style="margin-bottom: 2rem">
                     <li>
                         Jump straight to the
-                        <a style="bolder; font-size:1.5em;" href="0.18.0">latest version (which is 0.18.0)</a>
+                        <a style="bolder; font-size:1.5em;" href="0.18.0" rel="next">
+                            latest version (which is 0.18.0)
+                        </a>
                     </li>
                     <li>... or use the version switcher above to see the documentation of another version.</li>
                 </ul>
