add link for editing the page on github

--- a/0.13.0/index.html
+++ b/0.13.0/index.html
@@ -7,10 +7,11 @@
     <script>var pathToRoot = "";</script>
     <link href="../styles/style.css" rel="Stylesheet">
     <link href="../styles/jetbrains-mono.css" rel="Stylesheet">
-    <link href="../styles/logo-styles.css?v=1.1" rel="Stylesheet">
+    <link href="../styles/logo-styles.css?v=1.2" rel="Stylesheet">
     <link href="../styles/alert.css?v=1.1" rel="Stylesheet">
     <script type="text/javascript" src="../scripts/platform-content-handler.js" async="async"></script>
-    <script id="versions-script" type="text/javascript" src="../scripts/versions.js?v=1.1.2" data-version="0.13.0" async="async"></script>
+    <script id="versions-script" type="text/javascript" src="../scripts/versions.js?v=1.1.2" data-version="0.13.0"
+            async="async"></script>
 </head>
 <body>
 <div class="navigation-wrapper" id="navigation-wrapper">
@@ -58,6 +59,12 @@
         </div>
         <div class="footer">
             <span>Atrium &copy; Copyright Robert Stoll &lt;rstoll@tutteli.ch&gt;</span>
+            <span class="pull-right">
+                <span class="github"></span>
+                <a href="https://github.com/robstoll/atrium/edit/gh-pages/0.3.0/index.html"><span>Edit on Github</span>
+                    <span class="external-indicator"></span>
+                </a>
+            </span>
         </div>
     </div>
 </div>
