--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="description" content="Code documentation of Atrium, Overview">
-    <meta name="keywords" content="Kotlin, Expectation-library, Assertion-Library, Testing, Multiplatform">
+    <meta name="keywords" content="Kotlin, Expectation-library, Assertion-Library, test, Testing, Multiplatform, better error reports">
     <meta name="author" content="Robert Stoll">
     <meta name="copyright" content="Robert Stoll">
-    <meta name="og:image" content="../logo_social.png"/>
+    <meta name="og:image" content="logo_social.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-    <title>Atrium Overview</title>
+    <title>Atrium Code Documentation Overview</title>
     <script type="text/javascript" src="scripts/platform-content-handler.js" async="async"></script>
     <link href="logo-icon.svg" rel="icon" type="image/svg">
     <link href="styles/style.css" rel="Stylesheet">
     <link href="styles/jetbrains-mono.css" rel="Stylesheet">
-    <link href="styles/logo-styles.css?v=1.1" rel="Stylesheet">
+    <link href="styles/logo-styles.css?v=1.2" rel="Stylesheet">
     <link href="styles/alert.css?v=1.1" rel="Stylesheet">
     <script id="versions-script" type="text/javascript" src="scripts/versions.js?v=1.1.2" async="async"></script>
 </head>
@@ -32,12 +31,27 @@
     <div id="main" style="max-width: inherit;">
         <div class="main-content" id="content">
             <div class="cover ">
+                <h1>Code Documentation of Atrium</h1>
+                <ul style="margin-bottom: 2rem">
+                    <li>
+                        Jump straight to the
+                        <a style="bolder; font-size:1.5em;" href="0.18.0" rel="next">
+                            latest version (which is 0.18.0)
+                        </a>
+                    </li>
+                    <li>... or use the version switcher above to see the documentation of another version.</li>
+                </ul>
                 <h2 class="">Overview</h2>
                 <ul style="margin-bottom: 2rem">
-                    <li>Atrium is an open-source expectation/assertion library for Kotlin.</li>
+                    <li><b>Atrium</b> is an open-source expectation/assertion library for Kotlin.</li>
                     <li> It is licences under
                         <a href="https://joinup.ec.europa.eu/collection/eupl/eupl-text-11-12">
                             <span>EUPL 1.2</span><span class="external-indicator"></span>
+                        </a>
+                    </li>
+                    <li>Its source code can be found on
+                        <a href="https://github.com/robstoll/atrium">
+                            <span>GitHub</span><span class="external-indicator"></span>
                         </a>
                     </li>
                     <li>
@@ -48,19 +62,13 @@
                         of the project.
                     </li>
                 </ul>
-                <ul style="margin-bottom: 2rem">
-                    <li>
-                        Jump straight to the
-                        <a style="bolder; font-size:1.5em;" href="0.18.0" rel="next">
-                            latest version (which is 0.18.0)
-                        </a>
-                    </li>
-                    <li>... or use the version switcher above to see the documentation of another version.</li>
-                </ul>
-                <p>You are very welcome to contribute to Atrium:</p>
+
+                <h2>Your contribution</h2>
+                <p>You are very welcome to contribute to <b>Atrium</b>:</p>
                 <ul>
+                    <li>Fix the typos you find in this documentation.</li>
                     <li>
-                        star
+                        Star
                         <a href="https://github.com/robstoll/atrium">
                             <span>Atrium</span><span class="external-indicator"></span>
                         </a>
@@ -68,7 +76,7 @@
                     </li>
                     <li>
                         <a href="https://github.com/robstoll/atrium/issues/new?labels=bug&template=bug_report.yaml">
-                            <span>open a bug</span><span class="external-indicator"></span>
+                            <span>Open a bug</span><span class="external-indicator"></span>
                         </a>
                         or
                         <a href="https://github.com/robstoll/atrium/issues/new?template=feature_request.md">
@@ -87,6 +95,12 @@
         </div>
         <div class="footer">
             <span>Atrium &copy; Copyright Robert Stoll &lt;rstoll@tutteli.ch&gt;</span>
+            <span class="pull-right">
+                <span class="github"></span>
+                <a href="https://github.com/robstoll/atrium/edit/gh-pages/index.html"><span>Edit on Github</span>
+                    <span class="external-indicator"></span>
+                </a>
+            </span>
         </div>
     </div>
 </div>
