add titles to links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <div class="navigation-wrapper" id="navigation-wrapper">
     <div class="library-name">
-        <a href="">
+        <a href="" title="Code Documentation of Atrium, Overview">
             <span>Atrium</span>
         </a>
     </div>
@@ -35,9 +35,10 @@
                 <ul style="margin-bottom: 2rem">
                     <li>
                         Jump straight to the
-                        <a style="bolder; font-size:1.5em;" href="0.18.0" rel="next">
+                        <a style="bolder; font-size:1.5em;" href="0.18.0" rel="next" title="Latest version of Atrium is 0.18.0">
                             latest version (which is 0.18.0)
                         </a>
+                        of Atrium ...
                     </li>
                     <li>... or use the version switcher above to see the documentation of another version.</li>
                 </ul>
@@ -45,12 +46,12 @@
                 <ul style="margin-bottom: 2rem">
                     <li><b>Atrium</b> is an open-source expectation/assertion library for Kotlin.</li>
                     <li> It is licences under
-                        <a href="https://joinup.ec.europa.eu/collection/eupl/eupl-text-11-12">
+                        <a href="https://joinup.ec.europa.eu/collection/eupl/eupl-text-11-12" title="Atrium is licensed under EUPL 1.2">
                             <span>EUPL 1.2</span><span class="external-indicator"></span>
                         </a>
                     </li>
                     <li>Its source code can be found on
-                        <a href="https://github.com/robstoll/atrium">
+                        <a href="https://github.com/robstoll/atrium" title="Source Code of Atrium is hosted on GitHub">
                             <span>GitHub</span><span class="external-indicator"></span>
                         </a>
                     </li>
