--- a/0.18.0/index.html
+++ b/0.18.0/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="navigation-wrapper" id="navigation-wrapper">
     <div class="library-name">
-        <a href="../">
+        <a href="../" title="Code Documentation of Atrium, Overview">
             <span>Atrium</span>
         </a>
     </div>
