--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <div class="navigation-wrapper" id="navigation-wrapper">
     <div class="library-name">
-        <a href="" title="Code Documentation of Atrium, Overview">
+        <a href="" title="Overview Code Documentation of Atrium">
             <span>Atrium</span>
         </a>
     </div>
