improve description of landing page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="description" content="Code documentation of Atrium, Overview">
+    <meta name="description" content="This website contains the code documentation of all released Atrium versions. Atrium is an open-source multiplatform expectation / assertion library for Kotlin, supporting JVM, Android and JS.">
     <meta name="keywords" content="Kotlin, Expectation-library, Assertion-Library, test, Testing, Multiplatform, better error reports">
     <meta name="author" content="Robert Stoll">
     <meta name="copyright" content="Robert Stoll">
