fix link of all modules so that it is selected as well

--- a/1.0.0/kdoc/navigation.html
+++ b/1.0.0/kdoc/navigation.html
@@ -1,5 +1,5 @@
 <div class="sideMenu">
- <div class="sideMenuPart" pageid="atrium"><div class="overview"><a href="./">All modules</a></div></div>
+ <div class="sideMenuPart" pageid="Atrium::.ext/allModules///PointingToDeclaration//0"><div class="overview"><a href="./">All modules</a></div></div>
  <div class="sideMenuPart" id="atrium-api-fluent-nav-submenu" pageid="atrium-api-fluent::////PointingToDeclaration//63037676">
   <div class="overview">
    <span class="navButton" onclick="document.getElementById(&quot;atrium-api-fluent-nav-submenu&quot;).classList.toggle(&quot;hidden&quot;);"><span class="navButtonContent"></span></span><a href="atrium-api-fluent/index.html"><span><span>atrium-api-fluent</span></span></a>
