keep normal logo on doc landing pages

--- a/1.0.0/index.html
+++ b/1.0.0/index.html
@@ -14,7 +14,7 @@
             async="async"></script>
 </head>
 <body>
-<div class="navigation-wrapper" id="navigation-wrapper">
+<div class="navigation-wrapper" id="navigation-wrapper not-small">
     <div class="library-name">
         <a href="../" title="Back to Overview Code Documentation of Atrium">
             <span>Atrium</span>
