--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script id="versions-script" type="text/javascript" src="scripts/versions.js?v=1.2.0" async="async"></script>
 </head>
 <body>
-<div class="navigation-wrapper" id="navigation-wrapper">
+<div class="navigation-wrapper" id="navigation-wrapper not-small">
     <div class="library-name">
         <a href="" title="Overview Code Documentation of Atrium">
             <span>Atrium</span>
