--- a/latest/index.html
+++ b/latest/index.html
@@ -1,33 +1,74 @@
+<!DOCTYPE html>
 <html lang="en">
-   <head>
-    <title>Atrium - expectation library for Kotlin</title>
-    <script type="text/javascript">         
-      function redirect() {
-        var hash = ""
-        if(window.location.hash) {  
-          hash = window.location.hash.substring(1);
-          if (hash.startsWith('/')) {
-            hash = hash.substring(1);
+<head>
+    <meta name="description" content="This website contains the code documentation of all released Atrium versions. Atrium is an open-source multiplatform expectation / assertion library for Kotlin, supporting JVM, Android and JS.">
+    <meta name="keywords" content="Kotlin, Expectation-library, Assertion-Library, test, Testing, Multiplatform, better error reports">
+    <meta name="author" content="Robert Stoll">
+    <meta name="copyright" content="Robert Stoll">
+    <meta name="og:image" content="logo_social.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
+    <script type="text/javascript" src="../scripts/platform-content-handler.js" async="async"></script>
+    <link href="../logo-icon.svg" rel="icon" type="image/svg">
+    <link href="../styles/style.css" rel="Stylesheet">
+    <link href="../styles/jetbrains-mono.css" rel="Stylesheet">
+    <link href="../styles/logo-styles.css?v=1.2.2" rel="Stylesheet">
+    <link href="../styles/alert.css?v=1.1" rel="Stylesheet">
+    <script id="versions-script" type="text/javascript" src="../scripts/versions.js?v=1.3.0" async="async"></script>
+    <title>Atrium - redirect to latest version</title>
+    <script type="text/javascript">
+        function redirect() {
+          var hash = ""
+          if(window.location.hash) {  
+            hash = window.location.hash.substring(1);
+            if (hash.startsWith('/')) {
+              hash = hash.substring(1);
+            }
           }
+          var link = "/1.1.0/" + hash;
+<!--          window.location = link;-->
+          document.getElementById('link').href = link;
         }
-        var link = "/1.1.0/" + hash;
-        window.location = link;
-        document.getElementById('link').href = link;
-      }
     </script>
-      
-   </head>
-   
-   <body onload="redirect()">
-      <p>If you are not redirected automatically, then:
-        <ul>
-            <li>either click the link below, which will take you to the home page of the latest version</li>
-            <li>or replace `latest/#` in the current URL with 1.1.0</li>
-        </ul>
-      </p>
-      <form>
-         <a id="link" href="/1.1.0">1.1.0</a>
-      </form>
-      
-   </body>
+</head>
+<body>
+<div class="navigation-wrapper" id="navigation-wrapper not-small">
+    <div class="library-name">
+        <a href="../" title="Overview Code Documentation of Atrium">
+            <span>Atrium</span>
+        </a>
+    </div>
+    <div class="pull-right d-flex">
+        <button id="theme-toggle-button"><span id="theme-toggle"></span></button>
+    </div>
+</div>
+<div id="container">
+    <div id="main" style="max-width: inherit;">
+        <div class="main-content" id="content">
+            <div class="cover ">
+                <h2>Automatic redirect to latest version of Atrium ...</h2>
+                <p>... if you are not redirected automatically, then:</p>
+                <ul style="margin-bottom: 2rem">
+                    <li>
+                        Jump straight to the
+                        <a style="bolder; font-size:1.5em;" href="../1.1.0" rel="next" title="Latest version of Atrium is 1.1.0">
+                            latest version (which is 1.1.0)
+                        </a>
+                        of Atrium ...
+                    </li>
+                    <li>... or use the version switcher above to see the documentation of another version.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer">
+            <span>Atrium &copy; Copyright Robert Stoll &lt;rstoll@tutteli.ch&gt;</span>
+            <span class="pull-right">
+                <span class="github"></span>
+                <a href="https://github.com/robstoll/atrium/edit/gh-pages/latest/index.html"><span>Edit on Github</span>
+                    <span class="external-indicator"></span>
+                </a>
+            </span>
+        </div>
+    </div>
+</div>
+</body>
 </html>
