--- a/latest/index.html
+++ b/latest/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="Kotlin, Expectation-library, Assertion-Library, test, Testing, Multiplatform, better error reports">
     <meta name="author" content="Robert Stoll">
     <meta name="copyright" content="Robert Stoll">
-    <meta name="og:image" content="logo_social.png"/>
+    <meta name="og:image" content="../logo_social.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <script type="text/javascript" src="../scripts/platform-content-handler.js" async="async"></script>
     <link href="../logo-icon.svg" rel="icon" type="image/svg">
