activate redirection again in latest/index.html

--- a/latest/index.html
+++ b/latest/index.html
@@ -25,7 +25,7 @@
             }
           }
           var link = "/1.1.0/" + hash;
-<!--          window.location = link;-->
+          window.location = link;
           document.getElementById('link').href = link;
         }
     </script>
