--- a/0.3.0/index.html
+++ b/0.3.0/index.html
@@ -51,7 +51,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="doc"><span>KDoc</span></span></a>
+                        <a href="doc"><span>KDoc</span></a>
                     </li>
                 </ul>
                 <p>Back to <a href="../">the overview</a></p>
