--- a/1.0.0/index.html
+++ b/1.0.0/index.html
@@ -55,7 +55,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="kdoc"><span>KDoc</span></span></a>
+                        <a href="kdoc"><span>KDoc</span></a>
                     </li>
                 </ul>
                 <p>Back to <a href="../">the overview</a></p>
