fix redirect in latest/index, re-adding it to onload

--- a/latest/index.html
+++ b/latest/index.html
@@ -30,7 +30,7 @@
         }
     </script>
 </head>
-<body>
+<body onload="redirect()">
 <div class="navigation-wrapper" id="navigation-wrapper not-small">
     <div class="library-name">
         <a href="../" title="Overview Code Documentation of Atrium">
